crates/solverforge-macros/tests/ui/fail/planning_solution_unknown_argument.rs
use solverforge_macros::planning_solution;

#[planning_solution(conflict_repair_providers = "repairs")]
struct Plan {}

fn main() {}
